[package]
name = "openapi-yup-generator"
version = "0.0.4"
edition = "2021"
authors = ["igtm"]
description = "CLI tool for generating yup definitions from openapi3.yaml"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
convert_case = "0.6.0"
jsonc-parser = "0.21.0"
openapiv3 = "1.0.1"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
